@@ -37,6 +37,7 @@ RE:demo/.*\.(pvd|vtu|pvtu|xml|bin)
 RE:demo/adaptivity/.*/(cpp|python)/.*\.(pvd|vtu|pvtu|xml|bin|bin.gz)
 RE:demo/adaptivity/.*/indicators.py
 RE:demo/.*/cpp/demo_.*
+RE:test/.*/cpp/test_.*
 RE:test/unit/mesh/(cpp|python)/.*.(xml|m)
 RE:test/unit/parameter/(cpp|python)/.*.(xml|xml.gz)
 RE:test/unit/io/(cpp|python)/.*.(xml|xml.gz|vtu|pvtu|pvd)
